--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -1,12 +1,12 @@
 <div class="container">
   <div class="row">
     <span>
-      <h1>App Component</h1>
+      <h1>NgRx Demo</h1>
     </span>
   </div>
   <div class="row">
     <button class="btn btn-info btn-md" [ngStyle]="{'margin-right': '1em'}" [routerLink]="[ '/todo']" type="button">ToDo</button>
-    <button class="btn btn-info btn-md" [routerLink]="[ '/search']" type="button">Observable Search</button>
+    <button class="btn btn-info btn-md" [routerLink]="[ '/search']" type="button">Search</button>
   </div>
   <hr>
   <router-outlet></router-outlet>
